[package]
name = "rust-iiif"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
config = "0.15.19"
libvips-rs = "8.18.0"
moka = { version = "0.12.13", features = ["future"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
